# zndraw-joblib

./: .gitignore  .pre-commit-config.yaml  404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yaml  publish.yaml  pytest.yaml
concepts/architecture/: index.html
concepts/events/: index.html
concepts/jobs-and-tasks/: index.html
concepts/providers/: index.html
concepts/sweeper/: index.html
concepts/workers/: index.html
docs/: index.md  integration.md
docs/concepts/: architecture.md  events.md  jobs-and-tasks.md  providers.md  sweeper.md  workers.md
docs/plans/: 2026-01-31-joblib-implementation.md  2026-02-03-fastapi-users-integration.md  2026-02-03-worker-task-listing-endpoints.md  2026-02-06-code-review-fixes.md  2026-02-06-performance-optimizations.md  2026-02-07-internal-taskiq-workers-plan.md  2026-02-09-code-review-fixes.md  2026-02-09-socketio-events-design.md  2026-02-09-socketio-events-plan.md  2026-02-09-worker-disconnect-plan.md  (+9 more)
integration/: index.html
search/: search_index.json
tests/: conftest.py  test_client.py  test_dependencies.py  test_events.py  test_exceptions.py  test_init.py  test_models.py  test_multi_worker.py  test_ordering.py  test_pagination.py  test_providers.py  test_registry.py  test_resilience.py  test_router_events.py  test_router_job_list.py  test_router_jobs.py  test_router_task_claim.py  test_router_task_status.py  test_router_task_submit.py  test_router_worker.py  test_run_kwargs.py  test_schemas.py  test_serve.py  test_settings.py  test_stress.py  test_sweeper.py
(+12 files in other folders)
