[project]
name = "zndraw-joblib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-socketio",
    "redis>=7.1.0",
    "sqlmodel>=0.0.31",
]

[tool.uv.sources]
pydantic-socketio = { git = "https://github.com/PythonFZ/Pydantic-SocketIO/" }
