[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zndraw-joblib"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pydantic-socketio",
    "sqlmodel>=0.0.31",
    "zndraw-auth",
]

[tool.hatch.build.targets.wheel]
packages = ["src/zndraw_joblib"]

[tool.uv.sources]
pydantic-socketio = { git = "https://github.com/PythonFZ/Pydantic-SocketIO/" }

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "uvicorn>=0.40.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
